--- a/web-app/mova-stream/src/components/row_item/RowItem.module.scss
+++ b/web-app/mova-stream/src/components/row_item/RowItem.module.scss
@@ -8,22 +8,12 @@
   --row-height: 12.8rem;
   width: fit-content;
   height: fit-content;
-  // width: calc(var(--row-width) * 1);
-  // height: calc(var(--row-height) * 1);
-  // margin-right: 1rem;
-  /* CARD Animation */
 
   .card {
-    // cursor: pointer;
-    position: relative;
     width: fit-content;
     height: fit-content;
-    overflow: hidden;
-    // width: calc(var(--row-width) * 1);
-    // height: calc(var(--row-height) * 1);
     background-color: $grayDark;
     border-radius: var(--m-button-radius);
-    // @include transition();
 
     .card__header {
       position: relative;
@@ -150,7 +140,6 @@
     }
 
     &:hover {
-      overflow: visible;
       position: absolute;
       z-index: 1;
       @include boxShadow();
