--- a/web-app/mova-stream/src/layouts/wrapper_container/WrapperContainer.module.scss
+++ b/web-app/mova-stream/src/layouts/wrapper_container/WrapperContainer.module.scss
@@ -10,7 +10,7 @@
     .wrapper__content {
       position: absolute;
       top: 0;
-      left: var(--layout-horizontal-padding);
+      left: 0;
       right: 0;
     }
   }
