--- a/web-app/mova-stream/src/pages/home/Home.module.scss
+++ b/web-app/mova-stream/src/pages/home/Home.module.scss
@@ -3,13 +3,16 @@
   display: flex;
   flex-direction: column;
   row-gap: 12rem;
+  overflow: hidden;
 
   .wrapper__banner_overview {
+    margin-left: var(--layout-horizontal-padding);
   }
 
   .list__container {
     display: flex;
     flex-direction: column;
     row-gap: 10rem;
+    padding-bottom: calc(var(--layout-horizontal-padding) * 5);
   }
 }
